# opentxs-cli

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findopentxs-proto.cmake  uninstall.cmake.in  windll.rc.in  winexe.rc.in
docs/: CLIENT-COMMANDS.txt
scripts/: README.txt
scripts/bash_completion.d/: opentxs-bash-completion.sh
scripts/demo/csharp/: Main.cs
scripts/demo/php/: otapi.php  php_ot_test.php
scripts/demo/python/: python_ot_test.py
scripts/git_hooks/: pre-commit  pre-push
scripts/ot/: ot_made_easy.ot
scripts/smartcontracts/: readme.txt
scripts/smartcontracts/escrow/: escrow.cpp  escrow.otc
scripts/smartcontracts/two_way_trade/: trade.otc
scripts/tests/: ot_test.opentxs
scripts/util/: resync.ot
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  Record.cpp  Record.hpp  RecordList.cpp  RecordList.hpp  main.cpp  opentxs.cpp  opentxs.hpp
src/cli/commands/: CmdAcceptAll.cpp  CmdAcceptAll.hpp  CmdAcceptInbox.cpp  CmdAcceptInbox.hpp  CmdAcceptIncoming.cpp  CmdAcceptIncoming.hpp  CmdAcceptInvoices.cpp  CmdAcceptInvoices.hpp  CmdAcceptMoney.cpp  CmdAcceptMoney.hpp  CmdAcceptPayments.cpp  CmdAcceptPayments.hpp  CmdAcceptReceipts.cpp  CmdAcceptReceipts.hpp  CmdAcceptTransfers.cpp  CmdAcceptTransfers.hpp  CmdAcknowledgeBailment.cpp  CmdAcknowledgeBailment.hpp  CmdAcknowledgeConnection.cpp  CmdAcknowledgeConnection.hpp  CmdAcknowledgeNotice.cpp  CmdAcknowledgeNotice.hpp  CmdAcknowledgeOutBailment.cpp  CmdAcknowledgeOutBailment.hpp  CmdActivitySummary.cpp  CmdActivitySummary.hpp  CmdAddAsset.cpp  CmdAddAsset.hpp  CmdAddBitcoinAccount.cpp  CmdAddBitcoinAccount.hpp  CmdAddContact.cpp  CmdAddContact.hpp  CmdAddContract.cpp  CmdAddContract.hpp  CmdAddServer.cpp  CmdAddServer.hpp  CmdAddSignature.cpp  CmdAddSignature.hpp  CmdAllocateBitcoinAddress.cpp  CmdAllocateBitcoinAddress.hpp  (+302 more)
src/script/: CMakeLists.txt  main.cpp
